<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.fragment.user_cycle.RegisterFragment">
    <data>

    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/background"

        >
        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"

            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/create_new_account"
                android:textSize="@dimen/_16ssp"
                android:textColor="@color/text_color"
                android:textStyle="bold"
                android:layout_margin="@dimen/_10sdp"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/et_userCycle"
                android:hint="@string/phone"

                />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/et_userCycle"
                android:hint="@string/email"

                />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/et_userCycle"
                android:hint="@string/barthyday"

                />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/et_userCycle"
                android:hint="@string/blood_type"

                />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/et_userCycle"
                android:hint="@string/laste_date_donation"

                />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/et_userCycle"
                android:hint="@string/capital"

                />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/et_userCycle"
                android:hint="@string/city"

                />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/et_userCycle"
                android:hint="@string/namber_mobil"

                />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/et_userCycle"
                android:hint="@string/password"

                />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/et_userCycle"
                android:hint="@string/confirm_password"

                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/btn_userCycle"
                android:text="@string/sign_up"
                />


        </LinearLayout>
        </ScrollView>
    </LinearLayout>



</layout>