<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.fragment.user_cycle.ChangePasswordFragment">
    <data>

    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/background"

        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"

            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"
                />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/et_userCycle"
                android:hint="@string/phone"

                />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/et_userCycle"
                android:hint="@string/password_new"

                />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/et_userCycle"
                android:hint="@string/confirm_password"

                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/btn_userCycle"
                android:text="@string/change"
                />


        </LinearLayout>

    </LinearLayout>


</layout>